modified:   index.html 	modified:   style/index.css 	modified:   style/index.scss 	renamed:    threejsModel/license.txt -> threejsModel/Pistol_and_Kukri/license.txt 	renamed:    threejsModel/scene.bin -> threejsModel/Pistol_and_Kukri/scene.bin 	renamed:    threejsModel/scene.gltf -> threejsModel/Pistol_and_Kukri/scene.gltf 	renamed:    threejsModel/textures/material_1_baseColor.png -> threejsModel/Pistol_and_Kukri/textures/material_1_baseColor.png 	renamed:    threejsModel/textures/material_1_emissive.png -> threejsModel/Pistol_and_Kukri/textures/material_1_emissive.png 	renamed:    threejsModel/textures/material_1_normal.png -> threejsModel/Pistol_and_Kukri/textures/material_1_normal.png 	renamed:    threejsModel/textures/material_baseColor.png -> threejsModel/Pistol_and_Kukri/textures/material_baseColor.png 	renamed:    threejsModel/textures/material_emissive.png -> threejsModel/Pistol_and_Kukri/textures/material_emissive.png 	renamed:    threejsModel/textures/material_normal.png -> threejsModel/Pistol_and_Kukri/textures/material_normal.png 	new file:   threejsModel/buster_drone/license.txt 	new file:   threejsModel/buster_drone/scene.bin 	new file:   threejsModel/buster_drone/scene.gltf 	new file:   threejsModel/buster_drone/textures/Boden_baseColor.png 	new file:   threejsModel/buster_drone/textures/Boden_metallicRoughness.png 	new file:   threejsModel/buster_drone/textures/Boden_normal.png 	new file:   threejsModel/buster_drone/textures/body_baseColor.png 	new file:   threejsModel/buster_drone/textures/body_emissive.png 	new file:   threejsModel/buster_drone/textures/body_metallicRoughness.png 	new file:   threejsModel/buster_drone/textures/body_normal.png 	new file:   threejsModel/buster_drone/textures/material_baseColor.png 	new file:   threejsModel/buster_drone/textures/material_metallicRoughness.png 	new file:   threejsModel/buster_drone/textures/material_normal.png 	new file:   threejsModel/scifi_motorcycle_project_mx_2/license.txt 	new file:   threejsMode

--- a/style/index.css
+++ b/style/index.css
@@ -342,12 +342,17 @@ body section.top #clock .date {
 }
 body section.top model-viewer {
   position: fixed;
-  width: 8em;
-  height: 8em;
+  width: 7vmax;
+  height: 7vmax;
   margin: 0 auto;
   top: 0;
   right: 0;
   z-index: 10;
+}
+@media screen and (max-width: 1200px) {
+  body section.top model-viewer {
+    display: none;
+  }
 }
 body section.top h2#message {
   position: absolute;
