Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   README.md
	modified:   index.html
	modified:   js_basic/Splash.js
	modified:   style/index.css
	modified:   style/index.scss
	deleted:    threejsModel/buster_drone/license.txt
	deleted:    threejsModel/buster_drone/scene.bin
	deleted:    threejsModel/buster_drone/scene.gltf
	deleted:    threejsModel/buster_drone/textures/Boden_baseColor.png
	deleted:    threejsModel/buster_drone/textures/Boden_metallicRoughness.png
	deleted:    threejsModel/buster_drone/textures/Boden_normal.png
	deleted:    threejsModel/buster_drone/textures/body_baseColor.png
	deleted:    threejsModel/buster_drone/textures/body_emissive.png
	deleted:    threejsModel/buster_drone/textures/body_metallicRoughness.png
	deleted:    threejsModel/buster_drone/textures/body_normal.png
	deleted:    threejsModel/buster_drone/textures/material_baseColor.png
	deleted:    threejsModel/buster_drone/textures/material_metallicRoughness.png
	deleted:    threejsModel/buster_drone/textures/material_normal.png
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/license.txt
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/scene.bin
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/scene.gltf
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/textures/pART_01_baseColor.png
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/textures/pART_01_emissive.png
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/textures/pART_01_metallicRoughness.png
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/textures/pART_01_normal.png
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/textures/pART_02_baseColor.png
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/textures/pART_02_emissive.png
	deleted:    threejsModel/scifi_motorcycle_project_mx_2/textures/pART

--- a/style/index.css
+++ b/style/index.css
@@ -1132,8 +1132,8 @@ body .content .block .submitbutton {
   margin-bottom: 10vh;
   background-color: var(--justoppositeoftheme);
   border-radius: 1em;
-  -webkit-transition: all var(--animationtime) ease-in-out;
-  transition: all var(--animationtime) ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 body .content .block .submitbutton:hover {
   -webkit-transform: scale(1.1);
@@ -1145,8 +1145,8 @@ body .content .block .submitbutton:hover p {
 }
 body .content .block .submitbutton p {
   margin-bottom: 0px;
-  -webkit-transition: all var(--animationtime) ease-in-out;
-  transition: all var(--animationtime) ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   color: var(--justtheme);
 }
 body .content .block form {
