--- a/style/index.scss
+++ b/style/index.scss
@@ -1091,7 +1091,7 @@ body {
                 margin-bottom: 10vh;
                 background-color: var(--justoppositeoftheme);
                 border-radius: 1em;
-                transition: all var(--animationtime) ease-in-out;
+                transition: all 0.5s ease-in-out;
 
                 &:hover {
                     transform: scale(1.1);
@@ -1103,7 +1103,7 @@ body {
 
                 p {
                     margin-bottom: 0px;
-                    transition: all var(--animationtime) ease-in-out;
+                    transition: all 0.5s ease-in-out;
                     color: var(--justtheme);
                 }
             }
