--- a/style/index.css
+++ b/style/index.css
@@ -1126,6 +1126,52 @@ body .content .block .tabcontent p {
     line-height: 1.5em;
   }
 }
+body .content .block .alert {
+  width: 70%;
+  margin: auto;
+  bottom: 1em;
+  padding: 30px;
+  position: absolute;
+  border-radius: 5px;
+  -webkit-box-shadow: var(--GlowUp);
+          box-shadow: var(--GlowUp);
+  z-index: 1;
+}
+body .content .block .alert.nodisplaynow {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  display: none;
+}
+body .content .block .close {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  opacity: 0.5;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 50%;
+  right: 15px;
+  top: 25px;
+  text-align: center;
+  font-size: 1.6em;
+  cursor: pointer;
+}
+body .content .block .success-alert {
+  background-color: #a8f0c6;
+  border-left: 5px solid #178344;
+}
+body .content .block .success-alert .close {
+  border-color: #178344;
+  color: #178344;
+}
+body .content .block .danger-alert {
+  background-color: #f7a7a3;
+  border-left: 5px solid #8f130c;
+}
+body .content .block .danger-alert .close {
+  border-color: #8f130c;
+  color: #8f130c;
+}
 body .content .block .submitbutton {
   width: 40%;
   height: 4em;
