--- a/style/index.scss
+++ b/style/index.scss
@@ -1085,6 +1085,54 @@ body {
                 transform: translateY(-14px);
             }
 
+            .alert {
+                width: 70%;
+                margin: auto;
+                bottom: 1em;
+                padding: 30px;
+                position: absolute;
+                border-radius: 5px;
+                box-shadow: var(--GlowUp);
+                z-index: 1;
+
+                &.nodisplaynow{
+                    transition: all 0.5s ease-in-out;
+                    display: none;
+                }
+            }
+
+            .close {
+                position: absolute;
+                width: 30px;
+                height: 30px;
+                opacity: 0.5;
+                border-width: 1px;
+                border-style: solid;
+                border-radius: 50%;
+                right: 15px;
+                top: 25px;
+                text-align: center;
+                font-size: 1.6em;
+                cursor: pointer;
+            }
+
+            @mixin alert($name, $bgColor) {
+                $accentColor: darken($bgColor, 50);
+
+                .#{$name} {
+                    background-color:#{$bgColor};
+                    border-left: 5px solid $accentColor;
+
+                    .close {
+                        border-color: $accentColor;
+                        color: $accentColor;
+                    }
+                }
+            }
+
+            @include alert(success-alert, #a8f0c6);
+            @include alert(danger-alert, #f7a7a3);
+
             .submitbutton {
                 width: 40%;
                 height: 4em;
@@ -1096,7 +1144,8 @@ body {
                 &:hover {
                     transform: scale(1.1);
                     background-color: var(--justtheme);
-                    p{
+
+                    p {
                         color: var(--justoppositeoftheme);
                     }
                 }
