Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html
	modified:   js_basic/Emailsend.js
	modified:   js_basic/buttonalert.js
	modified:   style/index.css
	modified:   style/index.scss

--- a/style/index.css
+++ b/style/index.css
@@ -492,6 +492,57 @@ body .content {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+body .content .alert {
+  pointer-events: auto !important;
+  width: 40%;
+  right: 30%;
+  margin: auto;
+  top: 0px;
+  padding: 30px;
+  position: absolute;
+  border-radius: 5px;
+  -webkit-box-shadow: var(--GlowUp);
+          box-shadow: var(--GlowUp);
+  z-index: 1;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+}
+body .content .alert.nodisplaynow {
+  opacity: 0;
+}
+body .content .alertdisplaynow {
+  opacity: 1;
+}
+body .content .close {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  opacity: 0.5;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 50%;
+  right: 15px;
+  top: 25px;
+  text-align: center;
+  font-size: 1.6em;
+  cursor: pointer;
+}
+body .content .success-alert {
+  background-color: #a8f0c6;
+  border-left: 5px solid #178344;
+}
+body .content .success-alert .close {
+  border-color: #178344;
+  color: #178344;
+}
+body .content .danger-alert {
+  background-color: #f7a7a3;
+  border-left: 5px solid #8f130c;
+}
+body .content .danger-alert .close {
+  border-color: #8f130c;
+  color: #8f130c;
+}
 body .content .block {
   height: 85%;
   width: 95%;
@@ -1125,52 +1176,6 @@ body .content .block .tabcontent p {
     font-size: 14px;
     line-height: 1.5em;
   }
-}
-body .content .block .alert {
-  width: 70%;
-  margin: auto;
-  bottom: 1em;
-  padding: 30px;
-  position: absolute;
-  border-radius: 5px;
-  -webkit-box-shadow: var(--GlowUp);
-          box-shadow: var(--GlowUp);
-  z-index: 1;
-}
-body .content .block .alert.nodisplaynow {
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  display: none;
-}
-body .content .block .close {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  opacity: 0.5;
-  border-width: 1px;
-  border-style: solid;
-  border-radius: 50%;
-  right: 15px;
-  top: 25px;
-  text-align: center;
-  font-size: 1.6em;
-  cursor: pointer;
-}
-body .content .block .success-alert {
-  background-color: #a8f0c6;
-  border-left: 5px solid #178344;
-}
-body .content .block .success-alert .close {
-  border-color: #178344;
-  color: #178344;
-}
-body .content .block .danger-alert {
-  background-color: #f7a7a3;
-  border-left: 5px solid #8f130c;
-}
-body .content .block .danger-alert .close {
-  border-color: #8f130c;
-  color: #8f130c;
 }
 body .content .block .submitbutton {
   width: 40%;
