--- a/style/index.scss
+++ b/style/index.scss
@@ -859,6 +859,10 @@ body {
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
+
+                    &.spacearnd {
+                        justify-content: space-around;
+                    }
                 }
 
                 .swiper-slide:nth-child(3n+1) {
