--- a/style/index.css
+++ b/style/index.css
@@ -342,17 +342,17 @@ body section.top #clock .date {
     font-size: 1.3vmax;
   }
 }
-body section.top model-viewer {
+body section.top .Right {
   position: fixed;
-  width: 7vmax;
-  height: 7vmax;
+  width: 5vmax;
+  height: 5vmax;
   margin: 0 auto;
   top: 0;
   right: 0;
   z-index: 10;
 }
 @media screen and (max-width: 1200px) {
-  body section.top model-viewer {
+  body section.top .Right {
     display: none;
   }
 }
@@ -431,6 +431,11 @@ body section img#stars {
 }
 body section img#moon {
   mix-blend-mode: screen;
+}
+@media screen and (max-width: 1200px) {
+  body canvas {
+    visibility: hidden;
+  }
 }
 body #particles-js {
   height: 100vh;
