Trial to Optimize (plz workz)

--- a/style/index.scss
+++ b/style/index.scss
@@ -870,7 +870,7 @@ body {
                     align-items: center;
                     justify-content: center;
                     border-radius: 1em;
-                    box-shadow: var(--GlowUp);
+                    // box-shadow: var(--GlowUp);
 
                     &.spacearnd {
                         justify-content: space-around;
