--- a/style/minified.css
+++ b/style/minified.css
@@ -86,6 +86,21 @@ body .fire {
   width: 100%;
   z-index: 11;
 }
+body .fire.zoom {
+  -webkit-transform: scale(50);
+  transform: scale(50);
+  -webkit-transition: -webkit-transform 10s ease-in-out;
+  transition: -webkit-transform 10s ease-in-out;
+  transition: transform 10s ease-in-out;
+  transition: transform 10s ease-in-out, -webkit-transform 10s ease-in-out;
+}
+body .fire#intro {
+  position: absolute;
+  right: -420px;
+  white-space: nowrap;
+  font-size: 10.5vw;
+  z-index: 9;
+}
 body .fire .flames {
   position: absolute;
   bottom: 50%;
@@ -193,6 +208,35 @@ body header a > pre::before {
   content: "root@Guru:~$ ";
   text-transform: none;
   font-family: "Ubuntu Mono", monospace !important;
+}
+body header ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+body header ul li {
+  list-style: none;
+  margin-left: 0.2em;
+  margin-right: 0.2em;
+}
+body header ul li a {
+  text-decoration: none;
+  padding: 0.3em 0.5em;
+  color: var(--font);
+  border-radius: 5px;
+}
+body header ul li a:hover, body header ul li a.active {
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  color: var(--font);
 }
 body section {
   position: relative;
@@ -470,6 +514,9 @@ body .content .alert {
 }
 body .content .alert.nodisplaynow {
   opacity: 0;
+}
+body .content .alertdisplaynow {
+  opacity: 1;
 }
 body .content .close {
   position: absolute;
@@ -1083,6 +1130,22 @@ body .content .block .tabcontent {
   display: none;
   min-height: 180px;
 }
+@-webkit-keyframes tabEffect {
+  from {
+    top: -40px;
+  }
+  to {
+    top: 0px;
+  }
+}
+@keyframes tabEffect {
+  from {
+    top: -40px;
+  }
+  to {
+    top: 0px;
+  }
+}
 body .content .block .tabcontent.active {
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
@@ -1180,6 +1243,22 @@ body .content .block .form-field {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 16px;
+}
+body .content .block .form-field--is-active .form-field__control::after {
+  border-bottom: 2px solid var(--splashscreenbackground);
+  -webkit-transform: scaleX(150);
+  transform: scaleX(150);
+}
+body .content .block .form-field--is-active .form-field__label {
+  color: var(--justoppositeoftheme);
+  font-size: 0.75rem;
+  -webkit-transform: translateY(-14px);
+  transform: translateY(-14px);
+}
+body .content .block .form-field--is-filled .form-field__label {
+  font-size: 0.75rem;
+  -webkit-transform: translateY(-14px);
+  transform: translateY(-14px);
 }
 body .content .block .form-field__label {
   display: block;
@@ -1623,4 +1702,4 @@ body .content .block .form-field__textarea {
     opacity: 1;
     margin-left: 0;
   }
-}/*# sourceMappingURL=index.css.map */
+}
